# DocuRAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: ag2_config.yaml  config.yaml  sources.yaml
data/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: IngestPanel.tsx
scripts/: ingest.py  inspect_chunks.py  test_agent.py
src/agents/: assistant_agent.py  rag_tool.py  smart_retriever.py
src/api/: app.py
src/generation/: chain.py
src/ingestion/: pipeline.py  scraper.py  sources_manager.py
src/ui/: streamlit_app.py
tests/: test_rag.py
